services/test/01-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: test
spec:
  selector:
    app: test-app
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080
